Global code improvement

--- a/_pages/0.html
+++ b/_pages/0.html
@@ -859,6 +859,10 @@
                         </div>
                     </div>
 
+
+                    
+                            
+
                     <div class="row">
                         <div class="col-md-12">
                             <div class="elementToCopy" data-toggle="tooltip" data-placement="top"
@@ -870,7 +874,7 @@
                                             <span class="halton-callout-box__subtitle">New Service</span>
                                             <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet,
                                                 consectetur</h2>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi.
+                                            <p>Lorem ipsum dolor sit amet, <a class="link-underlined link-icon icon-after icon-pdf" href="#">Link message <span class="sr-only">(PDF link)</span> consectetur adipiscing elit</a>. Ut et massa mi.
                                                 Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
                                             <a href="#"
                                                 class="btn halton-btn text-icon icon-after icon-arrow-right">Check
@@ -1131,8 +1135,8 @@
                                 <div class="halton-modal modal-dialog" role="document">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title">Quo at iusto deleniti hic eius
-                                                explicabo corporis</h5>
+                                            <h3 class="modal-title">Quo at iusto deleniti hic eius
+                                                explicabo corporis</h3>
                                             <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
@@ -1169,6 +1173,43 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+
+
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <code>
+                                <pre>
+                                    &lt;div aria-hidden=&quot;true&quot; aria-labelledby=&quot;sample-modal&quot; class=&quot;modal fade&quot; id=&quot;sample-modal&quot;
+                                role=&quot;dialog&quot; style=&quot;margin: 1em; display: none&quot; tabindex=&quot;-1&quot;&gt;
+
+                                        &lt;div class=&quot;halton-modal modal-dialog&quot; role=&quot;document&quot;&gt;
+                                            &lt;div class=&quot;modal-content&quot;&gt;
+                                                &lt;div class=&quot;modal-header&quot;&gt;
+                                                    &lt;h3 class=&quot;modal-title&quot;&gt;Quo at iusto deleniti hic eius&lt;/h3&gt;
+                                                    &lt;button aria-label=&quot;Close&quot; class=&quot;close&quot; data-dismiss=&quot;modal&quot; type=&quot;button&quot;&gt;
+                                                        &lt;span aria-hidden=&quot;true&quot;&gt;&amp;times;&lt;/span&gt;
+                                                    &lt;/button&gt;
+                                                &lt;/div&gt;
+                                                &lt;div class=&quot;modal-body&quot;&gt;
+                                                <span class="badge badge-danger">For accessibility purpose: Never place an &lt;h1&gt;,  &lt;h2&gt;, &lt;h3&gt; in this area!</span>
+                                                    &lt;p&gt;
+                                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime
+                                                        possimus quisquam eius, amet soluta voluptas autem facilis, quasi error
+                                                        quia temporibus. Suscipit placeat autem nisi ex esse enim aspernatur
+                                                        unde.
+                                                    &lt;/p&gt;
+                                                &lt;/div&gt;
+                                                &lt;div class=&quot;modal-footer&quot;&gt;
+                                                    &lt;a target=&quot;_blank&quot; class=&quot;link-icon icon-before icon-external&quot;
+                                                        href=&quot;#&quot;&gt;Suscipit placeat autem nisi ex esse enim aspernatur unde.&lt;/a&gt;
+                                                &lt;/div&gt;
+                                            &lt;/div&gt;
+                                        &lt;/div&gt;
+                                    &lt;/div&gt;
+                                </pre>
+                            </code>
                         </div>
                     </div>
                 </div>
