--- a/_pages/2.html
+++ b/_pages/2.html
@@ -19,16 +19,23 @@
 
         <div class="bottom-section-spacer"></div>
 
-        <div class="halton-callout-box bottom-section-spacer">
-            <article class="halton-callout-box__wrapper">
-                <span class="halton-callout-box__subtitle">New Service</span>
-                <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                <a href="#" class="btn halton-btn">Check it out now</a>
-            </article>
+        <div class="bx-container bottom-section-spacer-md">
+            <div class="halton-callout-box">
+                <article class="halton-callout-box__wrapper">
+                    <span class="halton-callout-box__subtitle">New Service</span>
+                    <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet,
+                        consectetur</h2>
+                    <p>Lorem ipsum dolor sit amet, <a class="link-underlined link-icon icon-after icon-pdf" href="#">Link message <span class="sr-only">(PDF link)</span> consectetur adipiscing elit</a>. Ut et massa mi.
+                        Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
+                    <a href="#" class="btn halton-btn text-icon icon-after icon-arrow-right">Check
+                        it out now</a>
+                </article>
 
-            <img class="halton-callout-box__img" src="/img/Calloutbox.png" alt="Calloutbox message">
+                <img class="halton-callout-box__img" src="https://media.istockphoto.com/id/503492356/photo/checking-new-menu.jpg?s=1024x1024&amp;w=is&amp;k=20&amp;c=-wviOG8bIWUVJRtYZ06_1FapwjCuct_3zTq9U7k914g=" alt="Calloutbox message">
+            </div>
         </div>
+
+    
 
         <div class="row">
             <div class="col-md-8 col-sm-8 bx-container">
@@ -310,8 +317,8 @@
                         <div class="halton-modal modal-dialog" role="document" style="width:50%;">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLongTitle">Cross section of Britannia Road
-                                    </h5>
+                                    <h3 class="modal-title" id="exampleModalLongTitle">Cross section of Britannia Road
+                                    </h3>
                                     <button aria-label="Close" class="close" data-dismiss="modal" type="button"><span aria-hidden="true">×</span></button>
                                 </div>
 
