--- a/_pages/3.html
+++ b/_pages/3.html
@@ -48,7 +48,7 @@
 
                     <div class="row rbeh">
                         <div class="col-lg-4 bx-container">
-                            <div class="halton-card card card-icon icon-before icon-big icon-mail rbeh-item">
+                            <div class="halton-card card theme-infrastructure card-icon icon-before icon-big icon-mail rbeh-item">
                                 <div class="card-body">
                                     <h3 class="card-title">Online</h3>
                                     <p>
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 bx-container">
-                            <div class="halton-card card card-icon icon-before icon-big icon-cellphone rbeh-item">
+                            <div class="halton-card card theme-info card-icon icon-before icon-big icon-cellphone rbeh-item">
                                 <div class="card-body">
                                     <h3 class="card-title">Call 311</h3>
                                     <p>Call 311 to connect with someone from our team of experts.</p>
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                         <div class="col-lg-4 bx-container">
-                            <div class="halton-card card card-icon icon-before icon-big icon-mapping rbeh-item">
+                            <div class="halton-card card theme-success card-icon icon-before icon-big icon-mapping rbeh-item">
                                 <div class="card-body">
                                     <h3 class="card-title">Visit us</h3>
 
