--- a/_pages/8.html
+++ b/_pages/8.html
@@ -71,11 +71,9 @@
             </p>
             <div class="bottom-section-spacer-sm"></div>
             <p>
-              <a
+              <a class="link-underlined link-icon icon-before icon-pdf is-bold"
                 href="https://www.halton.ca/Repository/2023-2026-Halton-Region-Strategic-Business-Plan"
-                ><b class="text-icon icon-before icon-pdf"
-                  >Read the 2023-2026 Strategic Business Plan</b
-                >
+                >Read the 2023-2026 Strategic Business Plan
               </a>
             </p>
           </div>
@@ -152,7 +150,7 @@
                     <li>
                       Partnerships:
 
-                      <a
+                      <a class="link-underlined"
                         href="https://www.halton.ca/Repository/2023-2026-Halton-Region-Strategic-Business-Plan"
                         ><span>The 2023-2026 Strategic Business Plan </span></a
                       >
@@ -177,7 +175,7 @@
                     </li>
                     <li>
                       Sustainable Development Goals:
-                      <a
+                      <a class="link-underlined"
                         href="https://www.halton.ca/Repository/2023-2026-Halton-Region-Strategic-Business-Plan"
                         ><span>The 2023-2026 Strategic Business Plan </span></a
                       >
@@ -200,13 +198,13 @@
           <p>
             The 2023-2026 Strategic Business Plan's goals, actions and measures
             are grouped into four themes:
-            <a href="#theme1"><span>Community Well-being</span></a
-            >, <a href="#theme2"><span>Infrastructure and Growth</span></a
+            <a class="link-underlined" href="#theme1"><span>Community Well-being</span></a
+            >, <a class="link-underlined" href="#theme2"><span>Infrastructure and Growth</span></a
             >,
-            <a href="#theme3"
+            <a class="link-underlined" href="#theme3"
               ><span>Climate Change and the Environment and the</span></a
             >,
-            <a href="#theme4"><span>Excellence in Government.</span></a>
+            <a class="link-underlined" href="#theme4"><span>Excellence in Government.</span></a>
           </p>
         </div>
       </div>
@@ -215,7 +213,7 @@
 
       <div class="row marg rbeh bottom-section-spacer">
         <div id="theme1" class="col-lg-6 col-md-6 bx-container">
-          <div class="halton-card card card-icon icon-before icon-big icon-person rbeh-item">
+          <div class="theme-info halton-card card card-icon icon-before icon-big icon-person rbeh-item">
             <div class="card-body">
               <h3 class="card-title">Community Well-Being</h3>
 
@@ -240,12 +238,10 @@
               <p>
                 Learn about the actions and measures for Community Well-Being by
                 visiting
-                <a
-                  class="text-decoration"
+                <a 
+                  class="link-underlined"
                   href="https://www.halton.ca/Repository/2023-2026-Halton-Region-Strategic-Business-Plan#page=10"
-                  ><span>
-                    page 10 in the 2023-2026 Strategtic Business Plan</span
-                  ></a
+                  >page 10 in the 2023-2026 Strategtic Business Plan</a
                 >
               </p>
             </div>
@@ -253,7 +249,7 @@
         </div>
 
         <div id="theme2" class="col-lg-6 col-md-6 bx-container">
-          <div class="halton-card card card-icon icon-before icon-big icon-graph-up-arrow rbeh-item">
+          <div class="theme-infrastructure halton-card card card-icon icon-before icon-big icon-graph-up-arrow rbeh-item">
             <div class="card-body">
               <h3 class="card-title">Infrastructure and Growth</h3>
 
@@ -279,7 +275,7 @@
                 Learn about the actions and measures for Infrastructure and
                 Growth by visiting
                 <a
-                  class="text-decoration"
+                  class="link-underlined"
                   href="https://www.halton.ca/Repository/2023-2026-Halton-Region-Strategic-Business-Plan#page=16"
                   ><span>
                     page 16 in the 2023-2026 Strategic Business Plan.</span
@@ -292,7 +288,7 @@
 
         <div id="theme3" class="col-lg-6 col-md-6 bx-container">
           <div
-            class="halton-card card card-icon icon-before icon-big icon-thermometer-sun rbeh-item"
+            class="theme-success halton-card card card-icon icon-before icon-big icon-thermometer-sun rbeh-item"
           >
             <div class="card-body">
               <h3 class="card-title">Climate Change and the Environment</h3>
@@ -322,7 +318,7 @@
                 Learn about the actions and measures for Climate Change by
                 visiting
                 <a
-                  class="text-decoration"
+                  class="link-underlined"
                   href="https://www.halton.ca/Repository/2023-2026-Halton-Region-Strategic-Business-Plan#page=21"
                   ><span>
                     page 21 in the 2023-2026 Strategic Business Plan.</span
@@ -336,7 +332,7 @@
         <div class="col-lg-6 col-md-6 bx-container">
           <div
             id="theme4"
-            class="halton-card card card-icon icon-before icon-big icon-award-1 rbeh-item"
+            class="theme-excellence halton-card card card-icon icon-before icon-big icon-award-1 rbeh-item"
           >
             <div class="card-body">
               <h3 class="card-title">Excellence in Government</h3>
@@ -366,7 +362,7 @@
                 Learn about the actions and measures for Excellence in
                 Government by visiting
                 <a
-                  class="text-decoration"
+                  class="link-underlined"
                   href="https://www.halton.ca/Repository/2023-2026-Halton-Region-Strategic-Business-Plan#page=26"
                   ><span>
                     page 26 in the 2023-2026 Strategic Business Plan.</span
